Fix for newInstance() in java.lang.Class has been deprecated